--- a/server/index.html
+++ b/server/index.html
@@ -1,11 +1,19 @@
+<!DOCTYPE html>
+<html>
+<head>
 <script src="/socket.io/socket.io.js"></script>
-<script>
-  var socket = io.connect('http://localhost:8888');
-  socket.on('news', function (data) {
-    console.log(data);
-    socket.emit('my other event', { my: 'fgrs' });
-  });
-</script>
-<body style="width: 100px; color: red; ">
-	<h1>Check the console for Hello World!!!</h1>
+
+
+	<title></title>
+</head>
+<body style="font-size: 25px;">
+	<marquee>Check the terminal for gps data</marquee>
 </body>
+
+<script>
+  var socket = io.connect('http://localhost:8888/');
+
+    socket.emit('receive-gps', { lat: 'latitude',lon: 'longitude' });
+</script>
+</html>
+
