Changes as per PR comments

--- a/server/index.html
+++ b/server/index.html
@@ -13,7 +13,7 @@
 <script>
   var socket = io.connect('http://localhost:8888/');
 
-    socket.emit('receive-gps', { lat: 'latitude',lon: 'longitude' });
+    socket.emit('receive-gps', { lat: 13.361389,lon: 38.115556 });
 </script>
 </html>
 
